Fixed spacing issues with css Added a boolean variable which determines whether or not the grid will be displayed

--- a/map.css
+++ b/map.css
@@ -1,5 +1,7 @@
 .left-panel {
 	float: left;
+	height: 1024px;
+	overflow: auto;
 }
 
 .right-panel {
